--- a/templates/reise.html
+++ b/templates/reise.html
@@ -36,6 +36,7 @@
 
 
   <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
+  <div class="logout-bttn"><a href="{{ url_for('main') }}">Zurück</a></div>
   <div class="logout-bttn"><a href="{{ url_for('logout') }}">Logout</a></div>
   <script>
       // Musik ein-/ausschalten
