--- a/templates/404.html
+++ b/templates/404.html
@@ -20,7 +20,7 @@
 <body>
   <h1>404 – Seite nicht gefunden</h1>
   <p>Oh nein! Diese Seite gibt's nicht… vielleicht tanzt sie gerade auf einer anderen Hochzeit? 💃</p>
-  <p><a href="/">Zurück zur Startseite</a></p>
+  <p><a href="{{ url_for('main') }}">Zurück zur Startseite</a></p>
   <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </body>
 </html>
