--- a/templates/500.html
+++ b/templates/500.html
@@ -26,7 +26,7 @@
   </pre>
 {% endif %}
 
-  <p><a href="/">Zurück zur Startseite</a></p>
+  <p><a href="{{ url_for('main') }}">Zurück zur Startseite</a></p>
   <script defer data-domain="gigiriri.eu" src="https://plausible.io/js/script.js"></script>
 </body>
 </html>
