--- a/templates/reise.html
+++ b/templates/reise.html
@@ -24,13 +24,13 @@
   <!--Bisous-->
   <div class="bisous-top"><strong>HOCHZEITSREISE</strong></div>
   <!--Hero GIF-->
-  <div class="hero">
-      <img src="{{ url_for('static', filename='Japan.jpg') }}" alt="Top Bild">
+  <div class="hero-sm">
+      <img src="{{ url_for('static', filename='kawai.jpg') }}" alt="Top Bild">
   </div>
 
 <div class="section">
-    <p>Wir möchten uns dieses Jahr unseren langjährigen Wunsch erfüllen, Japan zu bereisen. </p>
-    <p>Dafür würden wir uns sehr über einen Beitrag in unsere Reisekasse freuen: <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 0000 0000 0000 0000<br>BIC:xxxxxxxxxxx</p><br>
+    <p>Wir erfüllen uns dieses Jahr unseren langjährigen Traum, Japan zu bereisen. </p>
+    <p>Dafür würden wir uns sehr über einen Beitrag in unsere Reisekasse freuen: <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 6112 0300 0012 0140 7473<br>BIC: BYLADEM1001</p><br>
     <p>Vielen Dank!<br>(˶˃ ᵕ ˂˶) .ᐟ.ᐟ</p>
 </div>
 
