--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,16 @@ a {
   height: auto;
   display: block;
 }
+.hero-sm {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.hero-sm img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
 
 .section {
   padding: 1rem 5px 1rem 5px;
