--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -43,12 +43,20 @@
       UNTERUHLDINGER STR. 45, 88709 MEERSBURG<br><br>
       DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
     <hr style="border-color: rgb(0, 0, 0);">
-    <br><br></p>
+    <br></p>
       <strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
       BODENSEERUNDFAHRT ODER MUSEUMSBESUCH TBC.<br><br>
       18:00 UHR<br>
       GEMEINSAMES ABENDESSEN (DETAILS BEI ANKUNFT)</p>
+    </div>
+    <hr style="border-color: rgb(0, 0, 0);">
+    <!-- Geschenke -->
+    <div class="section-mrb">
+      <p>GESCHENKE:</p>
+      <p>Für uns ist es das größte Geschenk, mit dir zu feiern.<br>Falls du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
+      <p><a href="{{ url_for('reise') }}">Zur Reise</a></p>
+      <p><a href="https://www.wishbob.com/lxqszhibwv">Zur Liste</a></p>
     </div>
 
   <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
