--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -41,22 +41,21 @@
       SEMINARSTRASSE 4<br><br>
       AB 16:00 UHR <br>🤍SOIRÉE🤍<br> VILLA AM SEE<br>
       UNTERUHLDINGER STR. 45, 88709 MEERSBURG<br><br>
-      DRESSCODE: CHIC - NICHT FORMELL<br><br></p>
+      DRESSCODE: CHIC - NICHT FORMELL</p>
     <hr style="border-color: rgb(0, 0, 0);">
-    <br></p>
-      <strong>24.05.2025 (OPTIONAL)</strong><br>
+    <br><strong>24.05.2025 (OPTIONAL)</strong><br>
       <p>14:00 UHR <br>
       BODENSEERUNDFAHRT ODER MUSEUMSBESUCH TBC.<br><br>
       18:00 UHR<br>
       GEMEINSAMES ABENDESSEN (DETAILS BEI ANKUNFT)</p>
-    </div>
-    <hr style="border-color: rgb(0, 0, 0);">
+    <!-- </div> -->
     <!-- Geschenke -->
-    <div class="section-mrb">
-      <p>GESCHENKE:</p>
+    <!-- <div class="section-mrb"> --> 
+      <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
+      <br><br><strong>GESCHENKE</strong>
       <p>Für uns ist es das größte Geschenk, mit dir zu feiern.<br>Falls du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
-      <p><a href="{{ url_for('reise') }}">Zur Reise</a></p>
-      <p><a href="https://www.wishbob.com/lxqszhibwv">Zur Liste</a></p>
+      <p><a href="{{ url_for('reise') }}">🍘Zur Reise🍘</a></p>
+      <p><a href="https://www.wishbob.com/lxqszhibwv">🦢Zur Liste🦢</a></p>
     </div>
 
   <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
