--- a/templates/reise.html
+++ b/templates/reise.html
@@ -29,14 +29,13 @@
   </div>
 
 <div class="section">
-    <p>Wir erfüllen uns dieses Jahr unseren langjährigen Traum, Japan zu bereisen. </p>
-    <p>Dafür würden wir uns sehr über einen Beitrag in unsere Reisekasse freuen: <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 6112 0300 0012 0140 7473<br>BIC: BYLADEM1001</p><br>
+    <p>Rebecca und Georg lost in translation in Japan🗾. Wenn Ihr uns für unsere Hochzeitsreise eine Freude machen möchtet, gebt und gerne eine Runde Sashimi aus :)  <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 6112 0300 0012 0140 7473<br>BIC: BYLADEM1001</p><br>
     <p>Vielen Dank!<br>(˶˃ ᵕ ˂˶) .ᐟ.ᐟ</p>
 </div>
 
 
   <button id="musik-toggle" onclick="toggleMusik()">🔊</button>
-  <div class="logout-bttn"><a href="{{ url_for('main') }}">Zurück</a></div>
+
   <div class="logout-bttn"><a href="{{ url_for('logout') }}">Logout</a></div>
   <script>
       // Musik ein-/ausschalten
