--- a/templates/reise.html
+++ b/templates/reise.html
@@ -29,8 +29,8 @@
   </div>
 
 <div class="section">
-    <p>Rebecca und Georg lost in translation in Japan. Wenn Ihr uns für unsere Hochzeitsreise eine Freude machen möchtet, gebt und gerne eine Runde Sashimi aus :)  <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 6112 0300 0012 0140 7473<br>BIC: BYLADEM1001</p><br>
-    <p>Vielen Dank!<br>(˶˃ ᵕ ˂˶) .ᐟ.ᐟ</p>
+    <p>Rebecca und Georg lost in translation in Japan🎌. Wenn Ihr uns für unsere Hochzeitsreise eine Freude machen möchtet, gebt und gerne eine Runde Sashimi aus :)  <br><br> Rebecca Ivancevic und Georg von Gruben<br>DKB<br>IBAN: DE 6112 0300 0012 0140 7473<br>BIC: BYLADEM1001</p><br>
+    <p>Vielen Dank!<br>(˶˃ ᵕ ˂˶)</p>
 </div>
 
 
