--- a/templates/meersburg.html
+++ b/templates/meersburg.html
@@ -53,7 +53,7 @@
     <!-- <div class="section-mrb"> --> 
       <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
       <br><br><strong>GESCHENKE</strong>
-      <p>Für uns ist es das größte Geschenk, mit dir zu feiern.<br>Falls du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
+      <p>Für uns ist es das größte Geschenk, mit Dir zu feiern.<br>Wenn Du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
       <p><a href="{{ url_for('reise') }}">🍘Zur Reise🍘</a></p>
       <p><a href="https://www.wishbob.com/lxqszhibwv">🦢Zur Liste🦢</a></p>
     </div>
