--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -66,6 +66,11 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="nachricht">PARTNER/IN</label>
+            <textarea name="name_p" id="name_p" rows="1"></textarea>
+        </div>
+
+        <div class="form-group">
             <label>FOOD</label> <!--Essen Partner/in-->
             <div class="button-toggle-group centered-toggle">
                 <input type="radio" id="essen-veg-p" name="essen-p" value="Veg">
