--- a/templates/main.html
+++ b/templates/main.html
@@ -52,10 +52,10 @@
     </div>
     <!-- Geschenke -->
     <div class="section">
-        <p>GESCHENKE:</p>
-        <p>Für uns ist es das größte Geschenk, mit dir zu feiern. Falls du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
-        <p><a href="{{ url_for('reise') }}">Einen Beitrag zu unserer Hochzeitsreise</a></p>
-        <p><a href="https://www.wishbob.com/lxqszhibwv">Ein Geschenk von der Liste</a></p>
+        <br><br><strong>GESCHENKE</strong>
+        <p>Für uns ist es das größte Geschenk, mit Dir zu feiern.<br>Wenn Du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
+        <p><a href="{{ url_for('reise') }}">🍘Zur Reise🍘</a></p>
+        <p><a href="https://www.wishbob.com/lxqszhibwv">🦢Zur Liste🦢</a></p>
     </div>
     <br>
     <div class="section">
