--- a/templates/main.html
+++ b/templates/main.html
@@ -40,6 +40,7 @@
     </div>
     <!-- Trauzeugen -->
     <div class="section">
+        <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
         <p>TRAUZEUGEN:</p>
         <div class="names">
             <li>Georg Richthofen</li>
@@ -51,7 +52,9 @@
         </div>
     </div>
     <!-- Geschenke -->
+
     <div class="section">
+        <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
         <br><br><strong>GESCHENKE</strong>
         <p>Für uns ist es das größte Geschenk, mit Dir zu feiern.<br>Wenn Du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
         <p><a href="{{ url_for('reise') }}">🍘Zur Reise🍘</a></p>
