--- a/static/style.css
+++ b/static/style.css
@@ -109,9 +109,13 @@ a {
 
 .section p {
   font-size:13px;
-  line-height: 15px;
+  line-height: 13px;
   padding: 0px 0px 10px 0px;
   margin: 0px 0px 0px 0px ;
+}
+.section a {
+  font-size: 15px;
+  text-transform: uppercase;
 }
 .section li {
   font-size:13px;
