--- a/static/style.css
+++ b/static/style.css
@@ -111,7 +111,7 @@ a {
   font-size:13px;
   /*line-height: 13px;*/
   padding: 0px 0px 10px 0px;
-  margin: 0px 0px 0px 0px ;*/
+  margin: 0px 0px 0px 0px ;
 }
 .section a {
   font-size: 15px;
