--- a/templates/main.html
+++ b/templates/main.html
@@ -35,11 +35,10 @@
         <p>EMPFANG UND DINNER AUF DEM EMBER ROOFTOP</p>
     </div>
     <!-- RSVP -->
-    <div class="section">
+    <div class="section-rsvp">
         <a href="{{ url_for('antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
-        
     </div>
-    <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
+    <div class="section"><hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;"></div>
     <!-- Trauzeugen -->
     <div class="section">
         <p>TRAUZEUGEN:</p>
