--- a/templates/main.html
+++ b/templates/main.html
@@ -38,7 +38,7 @@
     <div class="section-rsvp">
         <a href="{{ url_for('antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
     </div>
-    <div class="section"><hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;"></div>
+    <div class="section"><hr style="border: 1px solid black; width: 100%; clear: both; z-index: 9999; position: relative;"></div>
     <!-- Trauzeugen -->
     <div class="section">
         <p>TRAUZEUGEN:</p>
