--- a/templates/main.html
+++ b/templates/main.html
@@ -38,9 +38,9 @@
     <div class="section-rsvp">
         <a href="{{ url_for('antwort') }}" class="rsvp-button">💌RSVP HERE💌</a>
     </div>
-    <div class="section"><hr style="border: 1px solid black; width: 100%; clear: both; z-index: 9999; position: relative;"></div>
     <!-- Trauzeugen -->
     <div class="section">
+        <hr style="border: 1px solid black; width: 100%; clear: both; z-index: 9999; position: relative;">
         <p>TRAUZEUGEN:</p>
         <div class="names">
             <li>Georg Richthofen</li>
@@ -50,11 +50,11 @@
             <li>Mareike Martin</li>
             <li>Martin Meuter</li>
         </div>
+        <hr style="border: 1px solid black; width: 100%; clear: both; z-index: 9999; position: relative;">
     </div>
     <!-- Geschenke -->
 
     <div class="section">
-        <hr style="border: 1px solid black; clear: both; z-index: 9999; position: relative;">
         <br><br><strong>GESCHENKE</strong>
         <p>Für uns ist es das größte Geschenk, mit Dir zu feiern.<br>Wenn Du uns darüber hinaus etwas schenken möchtest, freuen wir uns über:</p>
         <p><a href="{{ url_for('reise') }}">🍘Zur Reise🍘</a></p>
