--- a/static/style.css
+++ b/static/style.css
@@ -257,6 +257,17 @@ a {
   color: rgb(0, 0, 0);
 }
 
+.alert {
+  padding: 0.75rem 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.375rem;
+  text-align: left;
+}
+
+.alert-success { background-color: #d1e7dd; color: #0f5132; }
+.alert-danger  { background-color: #f8d7da; color: #842029; }
+.alert-warning { background-color: #fff3cd; color: #664d03; }
+
 
 @media (max-width: 600px) {
   .section h1 {
