--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -30,9 +30,10 @@
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <div class="flash-messages">
+                <br>
                 {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">
-                <br>{{ message }}
+                {{ message }}
                 </div>
                 {% endfor %}
             </div>
