--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="nachricht">PARTNER/IN</label>
+            <label for="name_p">PARTNER/IN</label>
             <textarea name="name_p" id="name_p" rows="1"></textarea>
         </div>
 
