--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -24,9 +24,9 @@
     <!--Bisous-->
     <div class="bisous-top"><strong>BISOUS</strong></div>
     <!--Hero GIF-->
-    <div class="hero">
+    <!--<div class="hero">
         <img src="{{ url_for('static', filename='RuG.png') }}" alt="Top Bild">
-    </div>
+    </div>--><br>
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <div class="flash-messages">
