--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   font-size: 20px; 
   font-weight: 400;
-  letter-spacing: 0.5px; /* optisch feiner */
+  /*letter-spacing: 0.5px; *//* optisch feiner */
 }
 a {
   color: #000;
@@ -213,7 +213,7 @@ a {
 
 .form-group label {
   display: block;
-  margin-bottom: 0.5rem;
+  /*margin-bottom: 0.5rem;*/
   font-size: 1.1rem;
 }
 
