--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ html, body {
 body {
   margin: 0;
   padding: 0px;
-  font-family: 'Konkhmer Sleokchher', cursive;
+  font-family: 'Konkhmer Sleokchher', sans-serif, system-ui;
   background-color: #ffffff;
   background: #FFFFFF;
   color: #000;
@@ -67,7 +67,6 @@ a {
   margin-bottom: 1rem;
   font-weight: normal;
   letter-spacing: 1px;
-  font-family: 'Konkhmer Sleokchher', cursive;
 }
 
 .hero {
@@ -96,7 +95,6 @@ a {
   max-width: 600px;
   font-size:13px;
   transform: translateY(40px);
-  font-family: 'Konkhmer Sleokchher';
   font-style: normal;
   color: #000000;
   }
@@ -127,7 +125,6 @@ a {
   max-width: 600px;
   font-size:13px;
   transform: translateY(40px);
-  font-family: 'Konkhmer Sleokchher';
   font-style: normal;
   color: #000000;
   }
@@ -141,7 +138,6 @@ a {
   transform: translateY(40px);
   animation: fadeInUp 0.8s ease-out forwards;
   font-size:15px;
-  font-family: 'Konkhmer Sleokchher';
   font-style: normal;
   color: #000000;
   margin:30px;
@@ -204,7 +200,6 @@ a {
   background-color: #ffffffcc;
   border-radius: 12px;
   /*box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);*/
-  font-family: 'Konkhmer Sleokchher', cursive;
 }
 
 .form-group {
