--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label style="margin-top: 5px">ISST DU:</label>
+            <label style="margin-top: 2rem">ISST DU:</label>
             <div class="button-toggle-group centered-toggle">
                 <input type="radio" id="essen-veg" name="essen" value="Veg" required>
                 <label for="essen-veg">VEG</label>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label style="margin-top: 5px">MIT +1?</label>
+            <label style="margin-top: 2rem">MIT +1?</label>
             <div class="button-toggle-group centered-toggle">
                 <input type="radio" id="partner-ja" name="zusage-p" value="Ja" required>
                 <label for="partner-ja">JA</label>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label style="margin-top: 5px">FOOD +1</label> <!--Essen Partner/in-->
+            <label style="margin-top: 2rem">FOOD +1</label> <!--Essen Partner/in-->
             <div class="button-toggle-group centered-toggle">
                 <input type="radio" id="essen-veg-p" name="essen-p" value="Veg">
                 <label for="essen-veg-p">VEG</label>
@@ -88,7 +88,7 @@
         </div>
     
         <div class="form-group">
-            <label for="nachricht">💌 LOVE MESSAGES 💌</label>
+            <label style="margin-top: 2rem" for="nachricht">💌 LOVE MESSAGES 💌</label>
             <textarea name="nachricht" id="nachricht" rows="4"></textarea>
         </div>
     
