--- a/templates/zusage.html
+++ b/templates/zusage.html
@@ -62,7 +62,7 @@
         <div class="form-group">
             <label style="margin-top: 2rem">ISST DU:</label>
             <div class="button-toggle-group centered-toggle">
-                <input type="radio" id="essen-veg" name="essen" value="Veg" required>
+                <input type="radio" id="essen-veg" name="essen" value="Veg">
                 <label for="essen-veg">VEG</label>
                 <input type="radio" id="essen-all" name="essen" value="All">
                 <label for="essen-all">ALL</label>
@@ -71,7 +71,7 @@
         <div class="form-group">
             <label style="margin-top: 2rem">MIT +1?</label>
             <div class="button-toggle-group centered-toggle">
-                <input type="radio" id="partner-ja" name="zusage-p" value="Ja" required>
+                <input type="radio" id="partner-ja" name="zusage-p" value="Ja">
                 <label for="partner-ja">JA</label>
                 <input type="radio" id="partner-nein" name="zusage-p" value="Nein">
                 <label for="partner-nein">NEIN</label>
