--- a/static/style.css
+++ b/static/style.css
@@ -180,7 +180,7 @@ a {
   text-decoration: none;
   padding: 12px 30px;
   border-radius: 30px;
-  background-color: rgb(255, 255, 255);
+  background-color: #E4F3FD;
   color: #000000;
   cursor: pointer;
   font-weight: bold;
